moving a lot of stuffs into g object
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/view.html
+++ b/cwebviewer/templates/view.html
@@ -1,13 +1,13 @@
 {% macro link_archive() -%}
-    {{url_for('.archive_', aid=aid, page=page, fhash=fhash, _anchor=fhash)}}
+    {{url_for('.archive_', aid=aid, page=g.page, fhash=fhash, _anchor=fhash)}}
 {%- endmacro %}
 
 {% macro link_next() -%}
-    {{url_for('.view', aid=aid, page=page, fhash=fhash, pid=pid+step, width=width)}}
+    {{url_for('.view', aid=aid, page=g.page, fhash=fhash, pid=pid+g.step, width=width)}}
 {%- endmacro %}
 
 {% macro link_prev() -%}
-    {{url_for('.view', aid=aid, page=page, fhash=fhash, pid=max(pid-step, 0), width=width)}}
+    {{url_for('.view', aid=aid, page=g.page, fhash=fhash, pid=max(pid-g.step, 0), width=width)}}
 {%- endmacro %}
 
 {% macro progress_bar(ar, pid, step) -%}
@@ -20,7 +20,7 @@
 
 {% extends "base.html" %}
 
-{% block title %}{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{progress_bar(ar, pid, step)}}]{% endblock %}
+{% block title %}{{basename(fn)}} - {{ar.fnlist[pid]}} - [{{progress_bar(ar, pid, g.step)}}]{% endblock %}
 
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
@@ -50,7 +50,7 @@ function jump_at_top(e) {
 
 function jump_at_bottom(e) {
     if (atBottom) {
-        window.location.href = "{{ link_next() if pid+step < len(ar.fnlist) else link_archive() }}".replace(/&amp;/g, "&");
+        window.location.href = "{{ link_next() if pid+g.step < len(ar.fnlist) else link_archive() }}".replace(/&amp;/g, "&");
     }
 }
 
@@ -95,12 +95,12 @@ window.onscroll = function() {
 {% block navbar %}
 <div class="navbar top">
     <div align=center style=\"padding: 4px;\">
-    {{progress_bar(ar, pid, step)}}<br>
+    {{progress_bar(ar, pid, g.step)}}<br>
     {% if pid > 0 %}
         <a id=prev href="{{link_prev()}}">Prev</a>
     {% endif %}
     <a id=up href="{{link_archive()}}">Up</a>
-    {% if pid+step < len(ar.fnlist) %}
+    {% if pid+g.step < len(ar.fnlist) %}
         <a id=next href="{{link_next()}}">Next</a>
     {% endif %}
     </div>
@@ -108,7 +108,7 @@ window.onscroll = function() {
 {% endblock %}
 
 {% block content %}
-    {% for i in range(step) %}
+    {% for i in range(g.step) %}
         {% if pid+i < len(ar.fnlist) %}
             <img src="{{url_for('.image', aid=aid, fhash=fhash, pid=pid+i, width=width)}}" class="center fit">
         {% endif %}
