--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -19,12 +19,12 @@
 {% block content %}
         <h1>{{basename(fn)}}</h1>
         {% for e in archive.fnlist %}
-        <ul><a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=fhash, pid=loop.index0, page=page)}}">{{fix_up(e)}}</a></ul>
+        <ul><a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=fhash, pid=loop.index0, page=page)}}">{{g.fix_up(e)}}</a></ul>
         {% endfor %}
 {% endblock %}
 
 {% block navbar %}
 <div align=center style=\"padding: 4px;\">
-    <a id=up href="{{url_for('.subindex', aid=aid, _anchor=fhash, page=page)}} ">Up</a>
+    <a id=up href="{{url_for('.subindex', aid=aid, _anchor=fhash, page=g.page)}} ">Up</a>
 </div>
 {% endblock %}
