--- a/cwebviewer/templates/subindex.html
+++ b/cwebviewer/templates/subindex.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
 {% macro link_next_page() -%}
-    {{url_for('.subindex', aid=aid, page=page+1, width=width)}}
+    {{url_for('.subindex', aid=aid, page=g.page+1)}}
 {%- endmacro %}
 
 {% macro link_prev_page() -%}
-    {{url_for('.subindex', aid=aid, page=page-1, width=width)}}
+    {{url_for('.subindex', aid=aid, page=g.page-1)}}
 {%- endmacro %}
 
 {% macro left_up_prev() -%}
     <div align=center>
-    {% if page > 0 %}
+    {% if g.page > 0 %}
         <a id=prev href="{{link_prev_page()}}">Prev</a>
     {% endif %}
         <a id=up href="{{url_for('.index', aid=aid)}} ">Up</a>
-    {% if page*arch_per_page+arch_per_page < len(archives[ARCHIVE]) %}
+    {% if g.page*g.arch_per_page+g.arch_per_page < len(archives[ARCHIVE]) %}
         <a id=next href="{{link_next_page()}}">Next</a>
     {% endif %}
     </div>
@@ -24,10 +24,10 @@
 
 {% block content %}
     <table>
-    {% for k, v in islice(archives[ARCHIVE].items(), page*arch_per_page, page*arch_per_page+arch_per_page) %}
+    {% for k, v in islice(archives[ARCHIVE].items(), g.page*g.arch_per_page, g.page*g.arch_per_page+g.arch_per_page) %}
         <tr>
-            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=page)}}"><img src="{{url_for(".image", aid=aid, pid=0, fhash=k, width=512)}}" width=512></a> </td>
-            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=page)}}">{{relpath(v['filename'], archives[DIRNAME])}}</td>
+            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=g.page)}}"><img src="{{url_for(".image", aid=aid, pid=0, fhash=k, width=512)}}" width=512></a> </td>
+            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=g.page)}}">{{relpath(v['filename'], archives[DIRNAME])}}</td>
         </tr>
     {% endfor %}
     </table>
