--- a/cwebviewer/templates/base.html
+++ b/cwebviewer/templates/base.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{%- if session.get('night', False) -%}
+    {{ url_for('static', filename='css/night-style.css') }}
+    {%- else -%}
+    {{ url_for('static', filename='css/style.css') }}
+    {%- endif -%}">
     <title>{% block title %}{% endblock %} - Comic webviewer </title>
     {% endblock %}
   </head>
