--- a/cwebviewer/templates/index.html
+++ b/cwebviewer/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% for e in app.repo %}
-    <ul><a id="{{e}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e[0]}} </a></ul>
+    <ul><a id="{{e[DIRNAME]}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e[DIRNAME]}} </a></ul>
     {% endfor %}
     <p>
     <a href="{{url_for('.night')}}">Toggle night mode</a>
