--- a/cwebviewer/templates/subindex.html
+++ b/cwebviewer/templates/subindex.html
@@ -22,12 +22,17 @@
 
 {% block title %}Comic Webviewer{% endblock %}
 
+{% block scripts %}
+        <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/link_width.js') }}"></script>
+{% endblock %}
+
 {% block content %}
     <table>
     {% for k, v in islice(archives[ARCHIVE].items(), g.page*g.arch_per_page, g.page*g.arch_per_page+g.arch_per_page) %}
         <tr>
-            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=g.page)}}"><img src="{{url_for(".image", aid=aid, pid=0, fhash=k, width=512)}}" width=512></a> </td>
-            <td> <a id="{{k}}" href="{{url_for('.archive_', aid=aid, fhash=k, page=g.page)}}">{{v['filename'] | strip_path(archives[DIRNAME])}}</td>
+           <td> <a class="imglink" id="{{k}}" href="{{url_for('.view', aid=aid, fhash=k, pid=0, page=g.page)}}"><img src="{{url_for(".image", aid=aid, pid=0, fhash=k, width=512)}}" width=512></a> </td>
+           <td> <a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=k, pid=0, page=page)}}">{{v['filename'] | strip_path(archives[DIRNAME])}}</a></td>
         </tr>
     {% endfor %}
     </table>
