--- a/cwebviewer/templates/base.html
+++ b/cwebviewer/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% block head %}
     <link rel="stylesheet" href="{%- if session.get('night', False) -%}
     {{ url_for('static', filename='css/night-style.css') }}
