refactor and added archive.Repo
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/subindex.html
+++ b/cwebviewer/templates/subindex.html
@@ -14,7 +14,7 @@
         <a id=prev href="{{link_prev_page()}}">Prev</a>
     {% endif %}
         <a id=up href="{{url_for('.index', aid=aid)}} ">Up</a>
-    {% if g.page*g.arch_per_page+g.arch_per_page < archives[ARCHIVE] | length %}
+    {% if g.page*g.arch_per_page+g.arch_per_page < repo.comics | length %}
         <a id=next href="{{link_next_page()}}">Next</a>
     {% endif %}
     </div>
@@ -29,10 +29,10 @@
 
 {% block content %}
     <table>
-    {% for k, v in islice(archives[ARCHIVE].items(), g.page*g.arch_per_page, g.page*g.arch_per_page+g.arch_per_page) %}
+    {% for k, v in islice(repo.comics.items(), g.page*g.arch_per_page, g.page*g.arch_per_page+g.arch_per_page) %}
         <tr>
            <td> <a class="imglink" id="{{k}}" href="{{url_for('.view', aid=aid, fhash=k, pid=0, page=g.page)}}"><img src="{{url_for(".image", aid=aid, pid=0, fhash=k, width=512)}}" width=512></a> </td>
-           <td> <a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=k, pid=0, page=page)}}">{{v['filename'] | strip_path(archives[DIRNAME])}}</a></td>
+           <td> <a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=k, pid=0, page=page)}}">{{v['filename'] | strip_path(repo.dirname)}}</a></td>
         </tr>
     {% endfor %}
     </table>
