--- a/cwebviewer/templates/index.html
+++ b/cwebviewer/templates/index.html
@@ -3,8 +3,8 @@
 {% block title %}Comic Webviewer{% endblock %}
 
 {% block content %}
-    {% for e in app.repo %}
-    <ul><a id="{{e[DIRNAME]}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e[DIRNAME]}} </a></ul>
+    {% for e in app.repos %}
+    <ul><a id="{{e.dirname}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e.dirname}} </a></ul>
     {% endfor %}
     <p>
     <a href="{{url_for('.night')}}">Toggle night mode</a>
