added search function
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/subindex.html
+++ b/cwebviewer/templates/subindex.html
@@ -42,6 +42,13 @@
 
 {% block navbar %}
     {{left_up_prev()}}
+    <div id=search>
+        <form method='POST' action="{{url_for(".search")}}">
+            <input type=text name=keyword></input>
+            <input type=hidden name=aid value={{aid}}></input>
+            <input type=submit value=Search></input>
+        </form>
+    </div>
 {% endblock %}
 
 {% block footer %}
