--- a/cwebviewer/static/css/night-style.css
+++ b/cwebviewer/static/css/night-style.css
@@ -1,33 +1,4 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-.fit { /* set relative picture size */
-    max-width: 100%;
-    max-height: 100%;
-}
-.center {
-    display: block;
-    margin: auto;
-}
-
-#prev {
-    position:absolute;
-    left:0;
-    transform:translateX(200%);
-    font-size: 28px;
-}
-
-#next {
-    position:absolute;
-    right:0;
-    transform:translateX(-200%);
-    font-size: 28px;
-}
-
-#up {
-    font-size: 28px;
-}
+@import "common.css";
 
 body {
     background-color: black;
