--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -13,13 +13,13 @@
         {% if g.config.getboolean('thumbnail_in_archive') %}
         <tr>
             <td>
-                 <img src="{{url_for('.image', aid=aid, fhash=fhash, pid=loop.index0, width=480)}}">
+                 <img src="{{url_for('.image', repo_id=repo_id, fhash=fhash, pid=loop.index0, width=480)}}">
             </td>
         </tr>
         {% endif %}
         <tr>
             <td>
-                <a class="imglink" id="{{e}}" href="{{url_for('.view', aid=aid, fhash=fhash, pid=loop.index0, page=page)}}">{{g.fix_up(e)}}</a>
+                <a class="imglink" id="{{e}}" href="{{url_for('.view', repo_id=repo_id, fhash=fhash, pid=loop.index0, page=page)}}">{{g.fix_up(e)}}</a>
             </td>
         </tr>
         {% endfor %}
@@ -28,6 +28,6 @@
 
 {% block navbar %}
 <div align=center style=\"padding: 4px;\">
-    <a id=up href="{{url_for('.subindex', aid=aid, _anchor=fhash, page=g.page)}} ">Up</a>
+    <a id=up href="{{url_for('.subindex', repo_id=repo_id, _anchor=fhash, page=g.page)}} ">Up</a>
 </div>
 {% endblock %}
