--- a/cwebviewer/templates/index.html
+++ b/cwebviewer/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% for e in app.repos %}
-    <ul><a id="{{e.dirname}}" href="{{url_for('.subindex', aid=loop.index0)}}">{{loop.index}}: {{e.dirname}} </a></ul>
+    <ul><a id="{{e.dirname}}" href="{{url_for('.subindex', repo_id=loop.index0)}}">{{loop.index}}: {{e.dirname}} </a></ul>
     {% endfor %}
     <p>
     <a href="{{url_for('.night')}}">Toggle night mode</a>
