--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -19,7 +19,7 @@
         {% endif %}
         <tr>
             <td>
-                <a class="imglink" id="{{e}}" href="{{url_for('.view', repo_id=repo_id, fhash=fhash, pid=loop.index0, page=page)}}">{{g.fix_up(e)}}</a>
+                <a class="imglink" id="{{e}}" href="{{url_for('.view', repo_id=repo_id, fhash=fhash, pid=loop.index0)}}">{{g.fix_up(e)}}</a>
             </td>
         </tr>
         {% endfor %}
