add option in view and archive
and more options setting

Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/templates/view.html
+++ b/cwebviewer/templates/view.html
@@ -107,6 +107,7 @@ window.onscroll = function() {
     {% if pid+g.step < ar.fnlist | length %}
         <a id=next href="{{link_next()}}">Next</a>
     {% endif %}
+    <a id=option href={{url_for('.option', repo_id=repo_id)}}>Option</a>
     </div>
 </div>
 {% endblock %}
