--- a/cwebviewer/templates/option.html
+++ b/cwebviewer/templates/option.html
@@ -60,6 +60,10 @@
 				<td><input name=archive_per_page type=number value={{config.getint("archive_per_page")}}></input></td>
 			</tr>
 			<tr>
+				<td>Show thumbnail in archive</td>
+				<td><input type="checkbox" name=thumbnail_in_archive {{"checked" if config.getboolean("thumbnail_in_archive")}}></td>
+			</tr>
+			<tr>
 				<td>Archive reversed sort order</td>
 				<td><input type="checkbox" name=archive_reverse {{"checked" if config.getboolean("archive_reverse")}}></td>
 			</tr>
