--- a/cwebviewer/templates/archive.html
+++ b/cwebviewer/templates/archive.html
@@ -28,7 +28,7 @@
 
 {% block navbar %}
 <div align=center style=\"padding: 4px;\">
-    <a id=up href="{{url_for('.subindex', repo_id=repo_id, _anchor=fhash, page=g.fhash2page(app, g.config, repo_id, fhash))}} ">Up</a>
+    <a id=up href="{{url_for('.subindex', repo_id=repo_id, _anchor=fhash, page=g.fhash2page(g.config, app.repos[repo_id], fhash))}} ">Up</a>
     <a id=option href={{url_for('.option', repo_id=repo_id)}}>Option</a>
 </div>
 {% endblock %}
